siren: asan global buffer overflow
Hi!
While testing pidgin + sipe with a skype client on a network link where I artificially corrupt a small proportion of the UDP packets, I could produce this attached asan global-buffer-overflow error inside the huffman decoding function of the siren codec. This log seems to suggest that the side-effect of this corruption creates a value of absolute_region_power_index[i] + 24
out of the bounds of the array ?
Edited by Fabrice Bellet